(fix) alignment of ban modal

--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -27,6 +27,11 @@
     margin-top: 10px;
 }
 
+.modal-ban {
+    display: flex;
+    justify-content: center;
+}
+
 .btn {
     display: flex;
     justify-content: flex-start;
